# sam_trainer

./: .gitattributes  .gitignore  INFERENCE_REFACTOR.md  README.md  TRAINING_STRATEGY.md  example_config.yaml  full_sam_config.yaml  init.sh  install.sh  pixi.toml  pyproject.toml  test_config.yaml  test_inference_commands.sh  test_inference_tiff_commands.sh  training_only_config.yaml  zarr_config.yaml
.github/: copilot-instructions.md  global-copilot-instructions.md
configs/: ais_vit_b_a100.yaml  ais_vit_b_a40.yaml  aug_preprocess_train_vit_b_a100.yaml  aug_sabine_vit_b_a100.yaml  aug_vit_b_a100.yaml  debug_training_locally.yaml  embeddings_vit_b_a100.yaml  embeddings_vit_b_cpu_debug.yaml  full_image_vit_b_a100.yaml  full_image_vit_b_a40.yaml  full_image_vit_l_a100.yaml  full_sam_vit_b_a100.yaml  full_sam_vit_b_a100_high_lr.yaml  full_sam_vit_b_a100_more_samples.yaml  full_sam_vit_b_a40.yaml  full_sam_vit_h_a100.yaml  full_sam_vit_l_lm_a100.yaml  quick_test_vit_b_a100.yaml  quick_test_vit_b_a40.yaml  zarr_a100.yaml  zarr_a40.yaml  zarr_example.yaml
prompts/: project.instructions.md
sam_trainer/: __init__.py  augmentation.py  cli.py  config.py  embeddings.py  inference_tester.ipynb  io.py  preprocessing.py  run_inference.py  run_inference_hcs.py  run_inference_ngio.py  training.py  visualization.py
scripts/: check_label_foreground.py  check_label_shapes.py  plot_training_metrics.py  preprocess_dataset.py  remove_sam_labels.py  run_inference.py  run_inference_hcs.py  submit_embeddings.sh  submit_full_sam_training.sh  submit_inference.sh  submit_inference_hcs.sh  (+7 more)
(+10 files in other folders)
